@@ -4,6 +4,8 @@
 * Fix - Prevent multiple instances of the "Update the Payment Method" checkbox from displaying on the My Account > Payment Methods page when using the legacy checkout experience.
 * Fix - Prevent duplicate customer creation during guest checkout.
 * Fix - Hiding Multibanco payment method when the Stripe account country is not supported.
+* Fix - Display the payment decline reason on the checkout when using Cash App or WeChat.
+* Fix - Re-enable the "Place order" button on the block checkout after closing the WeChat or Cash App payment modal.
 * Fix - When SEPA tokens are added via the My Account > Payment methods page, ensure they are attached to the Stripe customer.
 
 = 8.5.1 - 2024-07-12 =
